--- a/index.html
+++ b/index.html
@@ -25,7 +25,33 @@
 <p>After your arrival in orbit in a hyperspace ship you have successfully landed on the planet. In a barren landscape shaped by regular and unhealty rainfall you need to establish a base to start exploring and terraforming.</p>
 
 <p>The terraforming comes with a twist: Machines with a biological intelligence are used for the processes and to make it more tricky the machines do have their own unique DNA, controlling their actions and features.</p>
+
+
+<p><a href="http://www.indiedb.com/games/apri50" title="View APRI50 on Indie DB" target="_blank" style="background:none;"><img style="border: none" src="http://button.indiedb.com/popularity/medium/games/34929.png" alt="APRI50 on IndieDB"/></a></p>
+
+<h3>Timeline</h3>
+
+<ul><li>Development started in March 2013</li>
+<li>alpha release is planned for late 2014</li>
+<li>Mac, Linux and Windows release from Day 1</li>
+</ul><h3>References, Weblinks</h3>
+
+<p>The graphic artists for the game are <a href="http://heliacwolf.deviantart.com">Irina</a> and <a href="http://igorsandman.deviantart.com">Igor</a>.</p>
+
+<p>Find out more about the game in the <a href="http://forums.tigsource.com/index.php?topic=32425.0">Devlog</a>, and all the old <a href="http://imgur.com/a/rQqIQ">Screenshots and gifs</a>.</p>
+
+<p>Similar games are <a href="http://rimworldgame.com">Rimworld</a>, <a href="http://www.curious-expedition.com">Curious Expedition</a> and <a href="http://www.ionisingsoftware.co.uk/isomer/">Isomer</a> which all focus on exploration and far away world.</p>
+
+<h3>Screenshots</h3>
+
+<p><a href="https://i.imgur.com/dc2DpJYs.jpg" style="background:none"><img width="520px" src="http://i.imgur.com/dc2DpJYl.jpg"/></a></p>
+
+<p>View more in the <a href="http://imgur.com/a/rQqIQ">imgur album</a>.</p>
+
+<iframe class="imgur-album" width="100%" height="550" frameborder="0" src="http://imgur.com/a/rQqIQ/embed"></iframe>
       </section>
+      
+
       <footer>
         <p>This project is maintained by <a href="https://github.com/TomK32">TomK32</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
