--- a/index.html
+++ b/index.html
@@ -18,6 +18,37 @@
         <h1>Apri50</h1>
         <p>a open world, DNA, terraforming game.</p>
 
+<h3>Timeline</h3>
+
+<ul><li>Development started in March 2013</li>
+<li>alpha release is planned for late 2014</li>
+<li>Mac, Linux and Windows release from Day 1</li>
+</ul>
+
+<h3>Team</h3>
+<p>APRI50 is the brain-child of <a href="http://ananasblau.com"/>Thomas R. Koll</a> who is also its only programmer.</p>
+<p>The graphic artists for the game are <a href="http://heliacwolf.deviantart.com">Irina</a> and
+<a href="http://igorsandman.deviantart.com">Igor</a>.</p>
+<p>This game would look a lot different if it wasn't for Amit Patel's <a href="http://cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/">article on map generation</a></p>
+
+<h3>Weblinks</h3>
+<ul>
+  <li><a href="http://forums.tigsource.com/index.php?topic=32425.0">Devlog</a></li>
+  <li><a href="http://imgur.com/a/rQqIQ">Screenshots and gifs</a></li>
+  <li><a href="http://indiedb.com/games/apri50">IndieDB entry</a></li>
+  <li><a href="http://reddit.com/r/apri50">reddit</a></li>
+</ul>
+
+<h3>Similar games are</h3>
+<ul>
+  <li><a href="http://factorio.com">Factorio</a></li>
+  <li><a href="http://rimworldgame.com">Rimworld</a></li>
+  <li><a href="http://www.curious-expedition.com">Curious Expedition</a></li>
+  <li><a href="http://www.ionisingsoftware.co.uk/isomer/">Isomer</a></li>
+  <li><a href="http://simpians.com/">Simpians</a></li>
+</ul>
+
+
       </header>
       <section>
         <p>Autonomous Planetary Research Individual 50 (APRI50) is a terraforming game set on a nearby exoplanet. You are playing Angelica Smith, highly trained scientist with a few biomechanic modifications, who was sent here as part of humanity’s search for new planets to colonize.</p>
@@ -28,19 +59,6 @@
 
 
 <p><a href="http://www.indiedb.com/games/apri50" title="View APRI50 on Indie DB" target="_blank" style="background:none;"><img style="border: none" src="http://button.indiedb.com/popularity/medium/games/34929.png" alt="APRI50 on IndieDB"/></a></p>
-
-<h3>Timeline</h3>
-
-<ul><li>Development started in March 2013</li>
-<li>alpha release is planned for late 2014</li>
-<li>Mac, Linux and Windows release from Day 1</li>
-</ul><h3>References, Weblinks</h3>
-
-<p>The graphic artists for the game are <a href="http://heliacwolf.deviantart.com">Irina</a> and <a href="http://igorsandman.deviantart.com">Igor</a>.</p>
-
-<p>Find out more about the game in the <a href="http://forums.tigsource.com/index.php?topic=32425.0">Devlog</a>, and all the old <a href="http://imgur.com/a/rQqIQ">Screenshots and gifs</a>.</p>
-
-<p>Similar games are <a href="http://rimworldgame.com">Rimworld</a>, <a href="http://www.curious-expedition.com">Curious Expedition</a> and <a href="http://www.ionisingsoftware.co.uk/isomer/">Isomer</a> which all focus on exploration and far away world.</p>
 
 <h3>Screenshots</h3>
 
@@ -53,7 +71,6 @@
       
 
       <footer>
-        <p>This project is maintained by <a href="https://github.com/TomK32">TomK32</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
