--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <header>
         <h1>Apri50</h1>
         <p>a open world, DNA, terraforming game.</p>
-
+      </header>
+    <div class="sidebar"></div>
 <h3>Timeline</h3>
 
 <ul><li>Development started in March 2013</li>
