--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Apri50</h1>
         <p>a open world, DNA, terraforming game.</p>
       </header>
-    <div class="sidebar"></div>
+    <div class="sidebar">
 <h3>Timeline</h3>
 
 <ul><li>Development started in March 2013</li>
@@ -48,9 +48,8 @@
   <li><a href="http://www.ionisingsoftware.co.uk/isomer/">Isomer</a></li>
   <li><a href="http://simpians.com/">Simpians</a></li>
 </ul>
-
-
-      </header>
+      </div>
+      
       <section>
         <p>Autonomous Planetary Research Individual 50 (APRI50) is a terraforming game set on a nearby exoplanet. You are playing Angelica Smith, highly trained scientist with a few biomechanic modifications, who was sent here as part of humanity’s search for new planets to colonize.</p>
 
