--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <div class="wrapper">
       <header>
         <h1>Apri50</h1>
-        <p>a open world, DNA, terraforming game.</p>
+        <p>Plan, build, seed and watch it terraform</p>
       </header>
     <div class="sidebar">
 <h3>Timeline</h3>
 
 <ul><li>Development started in March 2013</li>
 <li>alpha release is planned for late 2014</li>
-<li>Mac, Linux and Windows release from Day 1</li>
+<li>Mac, Linux and Windows form Day One</li>
 </ul>
 
 <h3>Team</h3>
