--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <script type="text/javascript">
             try {
               var pageTracker = _gat._getTracker("UA-1127310-7");
-            pageTracker._setDomainName('apri50');
+            pageTracker._setDomainName('apri50.com');
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
